src/test/ui/suggestions/suggest-labels.stderr
error[E0426]: use of undeclared label `'fo`
  --> $DIR/suggest-labels.rs:4:15
   |
LL |         break 'fo;
   |               ^^^
help: a label with a similar name exists in this scope
   |
LL |         break 'foo;
   |               ^^^^

error[E0426]: use of undeclared label `'bor`
  --> $DIR/suggest-labels.rs:8:18
   |
LL |         continue 'bor;
   |                  ^^^^
help: a label with a similar name exists in this scope
   |
LL |         continue 'bar;
   |                  ^^^^

error[E0426]: use of undeclared label `'longlable`
  --> $DIR/suggest-labels.rs:13:19
   |
LL |             break 'longlable;
   |                   ^^^^^^^^^^
help: a label with a similar name exists in this scope
   |
LL |             break 'longlabel1;
   |                   ^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0426`.
